[package]
name = "rdapify"
version = "0.6.11"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified, secure, high-performance RDAP client with built-in SSRF protection and privacy controls"
keywords = ["rdap", "whois", "domain", "network", "dns"]
categories = ["network-programming", "web-programming::http-client"]
readme = "../../README.md"
documentation = "https://docs.rs/rdapify"

[lib]
name = "rdapify"
crate-type = ["rlib"]

# ── Feature flags ─────────────────────────────────────────────────────────────
#
# Build profiles:
#
#   Minimal (core only):      --no-default-features
#   Default (recommended):    (no flags — memory-cache + stream on)
#   Full open-source build:   --features full
#   With HTTP service:        --features service
#   With SQLite storage:      --features sqlite
#
# Binary size targets:
#   Core (--no-default-features)  < 6 MB
#   Default                       < 7 MB
#   Core + CLI binary             < 8 MB
#   Core + service                < 9 MB
#   Full (Pro)                    < 12 MB

[features]
# Defaults — both on by default, safe to disable for minimal builds
default = ["memory-cache", "stream"]

# ── Core optional modules ─────────────────────────────────────────────────────
memory-cache = ["dep:rdap-cache", "rdapify-client/memory-cache"]
stream       = ["rdapify-client/stream"]
batch        = ["dep:rdap-batch"]
rate-limit   = ["dep:rdap-rate-limit"]

# ── Storage backends (skeleton crates — full impl tracked separately) ─────────
sqlite   = ["dep:rdap-sqlite"]
postgres = ["dep:rdap-postgres"]
mysql    = ["dep:rdap-mysql"]

# ── Service runtime ───────────────────────────────────────────────────────────
service = ["dep:rdap-service"]

# ── Observability (Stage D · D1 + Stage F · F4) ──────────────────────────────
# Off by default; enables the Prometheus exporter on the engine's hot path.
metrics = [
    "dep:rdap-metrics",
    "rdap-metrics/enabled",
    "rdap-core/metrics",
    "rdap-cache?/metrics",
]

# ── Pro / enterprise placeholders (Open Core; no code gated here) ─────────────
monitoring = []
webhooks   = []
analytics  = []
history    = []

# ── Convenience bundles ───────────────────────────────────────────────────────
# Full open-source build: all optional modules, no database backends.
full = ["memory-cache", "stream", "batch", "rate-limit"]

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
# Core — always compiled (no database, no web framework)
rdap-types     = { path = "../rdap-types",     version = "0.1.0" }
rdap-security  = { path = "../rdap-security",  version = "0.1.0" }
rdap-bootstrap = { path = "../rdap-bootstrap", version = "0.1.0" }
rdap-core      = { path = "../rdap-core",      version = "0.1.0" }
rdapify-client = { path = "../rdapify-client", version = "0.3.2", default-features = false }

# Optional modules
rdap-cache      = { path = "../rdap-cache",      version = "0.1.0", optional = true }
rdap-batch      = { path = "../rdap-batch",      version = "0.2.0", optional = true }
rdap-rate-limit = { path = "../rdap-rate-limit", version = "0.1.0", optional = true }

# Optional storage backends
rdap-sqlite   = { path = "../rdap-sqlite",   version = "0.1.0", optional = true }
rdap-postgres = { path = "../rdap-postgres", version = "0.1.0", optional = true }
rdap-mysql    = { path = "../rdap-mysql",    version = "0.1.0", optional = true }

# Optional service runtime
rdap-service  = { path = "../rdap-service",  version = "0.1.0", optional = true }

# Optional observability (only pulled by the `metrics` feature).
rdap-metrics  = { path = "../rdap-metrics",  version = "0.1.0", optional = true }

[dev-dependencies]
rdap-core       = { path = "../rdap-core",       version = "0.1.0" }
rdap-cache      = { path = "../rdap-cache",      version = "0.1.0" }
rdap-batch      = { path = "../rdap-batch",      version = "0.2.0" }
rdap-rate-limit = { path = "../rdap-rate-limit", version = "0.1.0" }
tokio           = { workspace = true }
tokio-test      = { workspace = true }
tokio-stream    = { workspace = true }
mockito         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
criterion       = { workspace = true }
proptest        = { workspace = true }
wiremock        = { workspace = true }
insta           = { workspace = true }
futures         = { workspace = true }

# ── Benchmark targets ─────────────────────────────────────────────────────────

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "ssrf"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "streaming"
harness = false

[[bench]]
name = "batch"
harness = false

[[bench]]
name = "bootstrap"
harness = false

[[bench]]
name = "validation"
harness = false
