[package]
name = "mock-upstream"
version = "0.1.0"
edition = "2021"
publish = false
description = "Stage E load-test fixture: deterministic RDAP server with chaos knobs."

# Standalone — not a member of the rdapify workspace. Keeps load-test infra
# from polluting the engine's `cargo test --workspace` runtime.
[workspace]

[[bin]]
name = "mock-upstream"
path = "src/main.rs"

[dependencies]
# Self-contained — does NOT depend on the rdapify workspace, so the harness
# and the engine cannot share a build cache and accidentally entangle.
axum       = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
rand       = "0.8"

[profile.release]
opt-level = 3
lto       = "thin"
